// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Random Placeholder Component input logic when inputs are blank shows error messaging 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -20,11 +20,11 @@
            </div>
            <div
              class=\\"col two-third\\"
            >
              <input
-               class=\\"\\"
+               class=\\"placeholder-input-error\\"
                data-testid=\\"placeholder-height\\"
                type=\\"number\\"
                value=\\"\\"
              />
              <label>
@@ -44,11 +44,11 @@
            </div>
            <div
              class=\\"col two-third\\"
            >
              <input
-               class=\\"\\"
+               class=\\"placeholder-input-error\\"
                data-testid=\\"placeholder-width\\"
                type=\\"number\\"
                value=\\"\\"
              />
              <label>
@@ -61,8 +61,14 @@
          class=\\"placeholder-btn\\"
          data-testid=\\"placeholder-submit\\"
        >
          Get Random Placeholder Image
        </button>
+       <div
+         class=\\"placeholder-error\\"
+         data-testid=\\"placeholder-error\\"
+       >
+         Please enter height and width
+       </div>
      </div>
    </section>
  </DocumentFragment>"
`;

exports[`Random Placeholder Component input logic when inputs are filled shows image 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -23,11 +23,11 @@
            >
              <input
                class=\\"\\"
                data-testid=\\"placeholder-height\\"
                type=\\"number\\"
-               value=\\"\\"
+               value=\\"1\\"
              />
              <label>
                (px)
              </label>
            </div>
@@ -47,11 +47,11 @@
            >
              <input
                class=\\"\\"
                data-testid=\\"placeholder-width\\"
                type=\\"number\\"
-               value=\\"\\"
+               value=\\"1\\"
              />
              <label>
                (px)
              </label>
            </div>
@@ -61,8 +61,25 @@
          class=\\"placeholder-btn\\"
          data-testid=\\"placeholder-submit\\"
        >
          Get Random Placeholder Image
        </button>
+     </div>
+     <div
+       class=\\"placeholder\\"
+       data-testid=\\"placeholder-image\\"
+     >
+       This placeholder by 
+       <a
+         href=\\"key\\"
+         rel=\\"noopener noreferrer\\"
+         target=\\"_blank\\"
+       >
+         key
+       </a>
+       <img
+         alt=\\"placeholder sourced from key\\"
+         src=\\"http://apiLink/1x1\\"
+       />
      </div>
    </section>
  </DocumentFragment>"
`;

exports[`Random Placeholder Component renders correctly 1`] = `
<div>
  <section>
    Overwhelmed with the placeholder image sites for your designs? Let me aggregrate all the favorites!
    <div
      class="dimensions"
    >
      <h3>
        Enter dimensions
      </h3>
      <div>
        <div
          class="input"
        >
          <div
            class="col one-third"
          >
            <label>
              Height:
            </label>
          </div>
          <div
            class="col two-third"
          >
            <input
              class=""
              data-testid="placeholder-height"
              type="number"
              value=""
            />
            <label>
              (px)
            </label>
          </div>
        </div>
        <div
          class="input"
        >
          <div
            class="col one-third"
          >
            <label>
              Width:
            </label>
          </div>
          <div
            class="col two-third"
          >
            <input
              class=""
              data-testid="placeholder-width"
              type="number"
              value=""
            />
            <label>
              (px)
            </label>
          </div>
        </div>
      </div>
      <button
        class="placeholder-btn"
        data-testid="placeholder-submit"
      >
        Get Random Placeholder Image
      </button>
    </div>
  </section>
</div>
`;
